--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
     ],
     "require": {
         "symfony/console": "^3.2",
-        "zircote/swagger-php": "^2.0"
+        "zircote/swagger-php": "^2.0",
+        "twig/twig": "^2.2.0"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^3.2"
     },
     "autoload": {
         "psr-4": {
