--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "symfony/console": "^3.2",
-        "zircote/swagger-php": "dev-master",
+        "zircote/swagger-php": "^2.0.13",
         "twig/twig": "^2.2.0"
     },
     "require-dev": {
