--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "symfony/console": "^3.2",
+        "php": ">=7.0",
+        "symfony/console": "^4.0.4",
         "zircote/swagger-php": "^2.0.13",
         "twig/twig": "^2.2.0"
     },
