--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
             "email": "talk@dmtry.me"
         }
     ],
+    "bin": [
+        "bin/scg"
+    ],
     "require": {
         "php": ">=7.0",
         "symfony/console": "^4.0.4",
